<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/epicPhotos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EPICphotos"
    android:layout_marginTop="10dp"
    >

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/latitude_label"/>
    <EditText
        android:id="@+id/latitudeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/longitudeTextView"
        app:layout_constraintBaseline_toBaselineOf="@id/latitudeTextView"
        android:hint="@string/latitude"
        android:inputType="numberDecimal" />
    <TextView
        android:id="@+id/andTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeEditText"
        android:text="@string/and"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/andTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/longitude"/>
    <EditText
        android:id="@+id/longitudeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/longitudeTextView"
        app:layout_constraintLeft_toRightOf="@id/longitudeTextView"
        android:hint="@string/longitude_field"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/and2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeEditText"
        android:text="@string/and"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/and2TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/date"/>
    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/dateTextView"
        app:layout_constraintLeft_toRightOf="@id/longitudeTextView"
        android:hint="@string/date_entry"
        android:inputType="date"/>


    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/clearButton"
        app:layout_constraintTop_toBottomOf="@id/dateEditText"
        android:text="@string/search_button_text"/>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/searchButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateEditText"
        android:text="@string/clear_button_text"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>